# AudioNoise

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FIR.raw  GEOMETRIC_RESONANCE_ANALYSIS.md  Makefile  README.md  USAGE.md  braid.h  chorus.h  convert.c  coupled_lfo.h  discont.h  distortion.h  effect.h  effects.py  entrained.h  ffi.h  flanger.h  formant.h  growlingbass.h  gui.py  jack_host.c  phaser.h  pyproject.toml  requirements.txt  tremolo.h  tui.py  util.h  visualize.py  waveshaper.h
crates/core/: Cargo.toml
crates/core/src/: effects.rs  lib.rs  math.rs  python.rs  raw.rs  waveform.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
python/audionoise/: __init__.py  _core.pyi  visualize.py
tests/: ANALYSIS.md  coupled_lfo.c  test_biquad  test_biquad.c  test_braid  test_braid.c  test_effects  test_effects.c  test_formant  test_formant.c  test_lfo_modes  test_lfo_modes.c  test_process  test_process.c  test_util  test_util.c
